Fixed problem with putting items in cart.

--- a/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
@@ -13,7 +13,7 @@
 {% include "ClubShopBundle:Checkout:cart_form.html.twig" %}
 
 <h3>Customer information</h3>
-<p>Company: {{ cart.customerAddress.companyName }}</p>
+<p>Company: {{ cart.customerAddress.companyName }}<br />
 CVR: {{ cart.customerAddress.cvr }}<br />
 Name: {{ cart.customerAddress.firstName }} {{ cart.customerAddress.lastName }}<br />
 Street: {{ cart.customerAddress.street }}<br />
