Added dynamic version number.

--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -106,7 +106,7 @@
 
                 <p class="f-left">&copy; 2011 <a href="#">ClubMaster</a>, All Rights Reserved &reg;</p>
 
-                <p class="f-right">Version <strong>beta2-dev</strong></p>
+                <p class="f-right">{% render "ClubUserBundle:Misc:versionBar" %}</p>
 
         </div> <!-- /footer -->
 
