--- a/src/Club/UserBundle/Resources/views/Filter/form.html.twig
+++ b/src/Club/UserBundle/Resources/views/Filter/form.html.twig
@@ -2,6 +2,8 @@
 <div id="submit" class="box-01 box" style="display:none;">
   <form method="POST" action="{{ path('club_user_filter_filter') }}">
 
+    {{ form_row(form.name) }}
+    {{ form_row(form.member_number) }}
     {{ form_row(form.min_age) }}
     {{ form_row(form.max_age) }}
     {{ form_row(form.gender) }}
