dont show remove installer file on installer.

--- a/src/Club/InstallerBundle/Resources/views/Installer/administrator.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/administrator.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubInstallerBundle::base.html.twig" %}
 
 {% block body %}
 <h2>ClubMaster Installer</h2>
