--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -90,7 +90,7 @@
                 <div id="content" class="box">
 
                         {% block header %}<h1>ClubMaster</h1>{% endblock %}
-                        {% render "ClubLogBundle:Log:LogView" %}
+                        {% block logger %}{% render "ClubLogBundle:Log:LogView" %}{% endblock %}
                         {% include 'ClubLayoutBundle:Default:flash.html.twig' %}
 
                         {% block body %}{% endblock %}
