--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -90,7 +90,9 @@
                 <div id="content" class="box">
 
                         {% block header %}<h1>ClubMaster</h1>{% endblock %}
-                        {% block logger %}{% render "ClubLogBundle:Log:LogView" %}{% endblock %}
+                        {% if is_granted('ROLE_ADMIN') %}
+                          {% block logger %}{% render "ClubLogBundle:Log:LogView" %}{% endblock %}
+                        {% endif %}
                         {% include 'ClubLayoutBundle:Default:flash.html.twig' %}
 
                         {% block body %}{% endblock %}
