Improved design on installer.

--- a/src/Club/InstallerBundle/Resources/views/Upgrade/index.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Upgrade/index.html.twig
@@ -19,10 +19,9 @@
   <li>Push the <strong>UPGRADE</strong> button below.</li>
 </ul>
 
+<p><strong><a href="{{ path('club_installer_upgrade_upgrade') }}">UPGRADE ClubMaster</a></strong></p>
 {% endif %}
 
-<p><strong><a href="{{ path('club_installer_upgrade_upgrade') }}">UPGRADE ClubMaster</a></strong></p>
-
-<p>ClubMaster team</p>
+<h4>ClubMaster team</h4>
 
 {% endblock %}
