--- a/src/Club/InstallerBundle/Resources/views/Upgrade/upgrade.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Upgrade/upgrade.html.twig
@@ -7,6 +7,6 @@
 
 <p>Your database has now been upgraded, return to your <a href="{{ path('homepage') }}">login screen</a>.</p>
 
-<p>ClubMaster team</p>
+<h4>ClubMaster team</h4>
 
 {% endblock %}
