--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -26,9 +26,9 @@
       <td>{{ subscription.expireDate|date('Y-m-d') }}</td>
       <td>
         {% if subscription.isActive %}
-        <a href="{{ path('shop_subscription_pause', {'id':subscription.id}) }}">Pause</a>
+          {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('shop_subscription_pause', {'id':subscription.id})} %}
         {% else %}
-        <a href="{{ path('shop_subscription_resume', {'id':subscription.id}) }}">Resume</a>
+          {% include "ClubLayoutBundle:Default:resume_link.html.twig" with {'url':path('shop_subscription_resume', {'id':subscription.id})} %}
         {% endif %}
       </td>
     </tr>
