--- a/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
@@ -16,7 +16,11 @@
       <td>{{ subscription.id }}</td>
       <td>{{ subscription.user.profile.firstName }} {{ subscription.user.profile.lastName }}</td>
       <td>{{ subscription.startDate|date('Y-m-d') }}</td>
+      {% if subscription.expireDate == '' %}
+      <td>Never</td>
+      {% else %}
       <td>{{ subscription.expireDate|date('Y-m-d') }}</td>
+      {% endif %}
       <td>
         <a href="{{ path('admin_shop_subscription_expire', {'id':subscription.id}) }}">Expire</a>
         {% if subscription.isActive %}
