Added account number to products.

--- a/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
+++ b/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
@@ -2,7 +2,10 @@
 
 {% block body %}
 
-<p class="box"><a href="{{ path('club_account_adminledger_new') }}" class="btn-create"><span>Create ledger</span></a></p>
+<p class="box">
+  <a href="{{ path('club_account_adminaccount_new') }}" class="btn-create"><span>Create account</span></a>
+  <a href="{{ path('club_account_adminledger_new') }}" class="btn-create"><span>Create ledger</span></a>
+</p>
 
 <h2>Account</h2>
 
