--- a/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
+++ b/src/Club/AccountBundle/Resources/views/AdminAccount/index.html.twig
@@ -29,7 +29,11 @@
       <td>{{ account.accountNumber }}</td>
       <td>{{ account.accountName }}</td>
       <td>{{ account.accountType }}</td>
-      <td><a href="{{ path('club_account_adminledger_index', {'id':account.id}) }}">Ledger</a></td>
+      <td>
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_account_adminaccount_edit',{'id':account.id})} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_account_adminaccount_delete',{'id':account.id})} %}
+        <a href="{{ path('club_account_adminledger_index', {'id':account.id}) }}">Ledger</a>
+      </td>
     </tr>
   {% else %}
   <tr>
