Fixed javascript confirm buttons.

--- a/src/Club/LayoutBundle/Resources/views/Default/resume_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/resume_link.html.twig
@@ -1,1 +1,1 @@
-<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/Button-Play-icon.png') }}" class="ico" alt="Resume" title="Resume" /></a>
+<a onclick="return confirm('Are you sure?');" href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/Button-Play-icon.png') }}" class="ico" alt="Resume" title="Resume" /></a>
