--- a/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminProductAttribute/index.html.twig
@@ -4,6 +4,8 @@
 {% block body %}
 <h2>Edit Product {{ product.productName }}</h2>
 
+<p>This is where you edit the different attributes for your product, if your product should have some special attributes.</p>
+
 <form method="post" action="{{ path('admin_shop_product_attribute', {'id':product.id}) }}">
 {% include "ClubShopBundle:AdminProductAttribute:form.html.twig" %}
 </form>
