--- a/src/Club/UserBundle/Resources/views/AdminLocationConfig/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocationConfig/index.html.twig
@@ -5,6 +5,8 @@
 <h2>Location config</h2>
 <p class="box"><a href="{{ path('club_user_adminlocationconfig_new', {'id':location.id}) }}" class="btn-create"><span>Create config</span></a></p>
 
+<p>If a location does not have any settings, it will relay on its parents.</p>
+
 <table>
   <thead>
     <tr>
