--- a/src/Club/UserBundle/Resources/views/AdminLocation/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocation/index.html.twig
@@ -4,6 +4,8 @@
 <p class="box"><a href="{{ path('admin_location_new') }}" class="btn-create"><span>Create location</span></a></p>
 
 <p>Here is a list of all locations, they are build in a tree structure to illustrate how they are child and parents of each other.</p>
+<p>If you want to change some configuration, you can change it for all child elements by change the root element configurations.</p>
+
 <ul>
   <li>{{ root }}
   {% include "ClubLayoutBundle:Default:config_link.html.twig" with {'url':path('admin_location_config', {'id':root.id})} %}
