--- a/src/Club/UserBundle/Resources/views/AdminLocationConfig/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminLocationConfig/index.html.twig
@@ -1,40 +1,10 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-
 {% block body %}
 <h2>Location config</h2>
-<p class="box"><a href="{{ path('club_user_adminlocationconfig_new', {'id':location.id}) }}" class="btn-create"><span>Create config</span></a></p>
 
 <p>If a location does not have any settings, it will relay on its parents.</p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Key</th>
-      <th>Value</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tfoot>
-    <tr class="bg">
-      <td colspan="3">&#160;</td>
-    </tr>
-  </tfoot>
-  <tbody>
-  {% for config in configs %}
-    <tr>
-      <td>{{ config.config }}</td>
-      <td>{{ config.value }}</td>
-      <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_location_config_edit', { 'id':config.id })} %}
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_user_adminlocationconfig_delete', { 'id':config.id })} %}
-      </td>
-    </tr>
-  {% else %}
-  <tr>
-    <td colspan="3">There are no configs for this location.</td>
-  </tr>
-  {% endfor %}
-  </tbody>
-</table>
+{% include "ClubUserBundle:AdminLocationConfig:form.html.twig" %}
+
 {% endblock %}
