Improved design of filter.

--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -9,6 +9,8 @@
 
 {% render "ClubUserBundle:Filter:getFilter" %}
 
+{% include "ClubLayoutBundle:Default:paginator.html.twig" %}
+
 <form method="post" action="{{ path('admin_user_batch') }}">
 <table>
   <thead>
