--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -15,6 +15,7 @@
 <p class="box">
   <a href="{{ path('shop_checkout_empty') }}" class="btn-info"><span>Empty cart</span></a>
   <a href="{{ path('shop') }}" class="btn-info"><span>Continue shopping</span></a>
+  <a href="{{ path('club_shop_coupon_add') }}" class="btn-info"><span>Add coupon</span></a>
   <a href="{{ path('shop_checkout_shipping') }}" class="btn-info"><span>Checkout</span></a>
 </p>
 
