Added special price.

--- a/src/Club/ShopBundle/Resources/views/Product/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Product/index.html.twig
@@ -8,8 +8,8 @@
 
   <h2 class="nomb">{{ product.productName }}</h2>
   <p class="nomt low">
-    Price: {{ product.price }}<br />
-    Vat price: {{ product.vatPrice }}<br />
+    Price: {{ product.specialPrice }}<br />
+    Vat price: {{ product.specialVatPrice }}<br />
   </p>
   <h2>Description</h2>
   <p>{{ product.description|raw }}</p>
