--- a/src/Club/ShopBundle/Resources/views/AdminCoupon/log.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminCoupon/log.html.twig
@@ -6,23 +6,25 @@
   <thead>
     <tr>
       <th>Coupon</th>
+      <th>User</th>
       <th>Used At</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="2">&#160;</td>
+      <td colspan="3">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for coupon in coupons %}
     <tr>
       <td>{{ coupon.coupon.couponKey }}</td>
+      <td>{{ coupon.user.profile.name }}</td>
       <td>{{ coupon.createdAt|date('Y-m-d H:i:s') }}</td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="2">This coupon has never been used.</td>
+    <td colspan="3">This coupon has never been used.</td>
   </tr>
   {% endfor %}
   </tbody>
