View if subscription is active or not.

--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>Id</th>
+      <th>Active</th>
       <th>Type</th>
       <th>Name</th>
       <th>Start date</th>
@@ -19,7 +19,7 @@
   <tbody>
   {% for subscription in user.subscriptions %}
     <tr>
-      <td>{{ subscription.id }}</td>
+      <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':subscription.isActive} %}</td>
       <td>{{ subscription.type|capitalize }}</td>
       <td>{{ subscription.user.profile.firstName }} {{ subscription.user.profile.lastName }}</td>
       <td>{{ subscription.startDate|date('Y-m-d') }}</td>
