Fixed change shipping method.

--- a/src/Club/ShopBundle/Resources/views/Checkout/shipping.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/shipping.html.twig
@@ -9,7 +9,9 @@
 <fieldset>
   <legend>Shipping Information</legend>
 
-  <p>{{ form_widget(form) }}</p>
+  <p>{{ form_row(form1) }}</p>
+  <p>{{ form_row(form2) }}</p>
+
   <p><input type="submit" value="Continue" class="input-submit" /></p>
 </fieldset>
 </form>
