--- a/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminPaymentMethod/index.html.twig
@@ -1,8 +1,7 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
-
 {% block body %}
-<p class="box"><a href="{{ path('admin_shop_payment_method_new') }}" class="btn-create"><span>Create payment_method</span></a></p>
+<p class="box"><a href="{{ path('admin_shop_payment_method_new') }}" class="btn-create"><span>Create payment method</span></a></p>
 
 <table>
   <thead>
