--- a/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
@@ -1,9 +1,7 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
-
 {% block body %}
-
-<h3>Payment Information</h3>
+<h2>Payment Information</h2>
 
 {% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
 
@@ -11,7 +9,8 @@
 <fieldset>
   <legend>Payment Information</legend>
 
-  <p>{{ form_widget(form) }}</p>
+  <p>{{ form_row(form) }}</p>
+
   <p><input type="submit" value="Continue" class="input-submit" /></p>
 </fieldset>
 </form>
