--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -78,7 +78,7 @@
 
                         </div> <!-- /padding -->
 
-                        {% if is_granted('ROLE_ADMIN') %}
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                           {% render "ClubMenuBundle:Default:leftMenu" %}
                         {% endif %}
 
