--- a/src/Club/ShopBundle/Resources/views/AdminOrder/order_form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/order_form.html.twig
@@ -11,9 +11,9 @@
   {% for item in order.orderProducts %}
   <tr>
     <td>{{ item.productName }}</td>
-    <td>{{ item.price }}</td>
+    <td>{{ item.price|price }}</td>
     <td>{{ item.quantity }}</td>
-    <td>{{ item.price }}</td>
+    <td>{{ item.priceSummary|price }}</td>
   </tr>
   {% else %}
   <tr>
@@ -27,7 +27,7 @@
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3"><b>Total</b></td>
-    <td>{{ order.vatPrice }}</td>
+    <td>{{ order.vatPrice|price }}</td>
   </tr>
   </tfoot>
 </table>
