--- a/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
@@ -11,9 +11,9 @@
   {% for item in cart.cartProducts %}
   <tr>
     <td>{{ item.productName }}</td>
-    <td>{{ item.vatPrice }}</td>
+    <td>{{ item.vatPrice|price }}</td>
     <td>{{ item.quantity }}</td>
-    <td>{{ item.vatSummary }}</td>
+    <td>{{ item.vatSummary|price }}</td>
   </tr>
   {% else %}
   <tr>
@@ -27,7 +27,7 @@
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3"><b>Total</b></td>
-    <td>{{ cart.vatPrice }}</td>
+    <td>{{ cart.vatPrice|price }}</td>
   </tr>
   </tfoot>
 </table>
