Renamed filter is_active to active.

--- a/src/Club/UserBundle/Resources/views/Filter/_form.html.twig
+++ b/src/Club/UserBundle/Resources/views/Filter/_form.html.twig
@@ -18,7 +18,7 @@
     {{ form_row(form.city) }}
     {{ form_row(form.country) }}
     {{ form_row(form.location) }}
-    {{ form_row(form.is_active) }}
+    {{ form_row(form.active) }}
     {{ form_row(form.has_ticket) }}
     {{ form_row(form.has_subscription) }}
     {{ form_row(form._token) }}
