--- a/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminSubscription/subscription_table.html.twig
@@ -13,7 +13,7 @@
   <tbody>
   {% for subscription in user.subscriptions %}
     <tr>
-      <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':subscription.isActive} %}</td>
+      <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':subscription.active} %}</td>
       <td>{{ subscription.user.profile.firstName }} {{ subscription.user.profile.lastName }}</td>
       <td>{{ subscription.startDate|date('Y-m-d') }}</td>
       {% if subscription.expireDate == '' %}
@@ -24,7 +24,7 @@
       <td>
         {% if not subscription.isExpired %}
           {% include "ClubLayoutBundle:Default:expire_link.html.twig" with {'url':path('admin_shop_subscription_expire', {'id':subscription.id})} %}
-        {% if subscription.isActive %}
+        {% if subscription.active %}
           {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('admin_shop_subscription_pause', {'id':subscription.id})} %}
         {% else %}
           {% include "ClubLayoutBundle:Default:resume_link.html.twig" with {'url':path('admin_shop_subscription_resume', {'id':subscription.id})} %}
