--- a/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/subscription_table.html.twig
@@ -19,7 +19,7 @@
   <tbody>
   {% for subscription in user.subscriptions %}
     <tr>
-      <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':subscription.isActive} %}</td>
+      <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':subscription.active} %}</td>
       <td>{{ subscription.type|capitalize }}</td>
       <td>{{ subscription.user.profile.firstName }} {{ subscription.user.profile.lastName }}</td>
       <td>{{ subscription.startDate|date('Y-m-d') }}</td>
@@ -30,7 +30,7 @@
       {% endif %}
       <td>
         {% if not subscription.isExpired %}
-        {% if subscription.isActive %}
+        {% if subscription.active %}
           {% include "ClubLayoutBundle:Default:pause_link.html.twig" with {'url':path('shop_subscription_pause', {'id':subscription.id})} %}
         {% else %}
           {% include "ClubLayoutBundle:Default:resume_link.html.twig" with {'url':path('shop_subscription_resume', {'id':subscription.id})} %}
