--- a/src/Club/UserBundle/Resources/views/AdminUser/subscription_table.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/subscription_table.html.twig
@@ -19,7 +19,7 @@
       <td>{{ subscription.expireDate|date('Y-m-d') }}</td>
       <td>
         <a href="{{ path('shop_subscription_expire', {'id': subscription.id}) }}">Cancel</a>
-        {% if subscription.isActive %}
+        {% if subscription.active %}
         <a href="{{ path('shop_subscription_pause', {'id':subscription.id}) }}">Pause</a>
         {% else %}
         <a href="{{ path('shop_subscription_resume', {'id':subscription.id}) }}">Resume</a>
