--- a/src/Club/MenuBundle/Resources/views/Default/leftMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/leftMenu.html.twig
@@ -1,10 +1,12 @@
 <ul class="box">
   {% for item in menu %}
-  <li><a href="{{ item.route }}">{{ item.name }}</a>
+  <li {% if item.active is defined %}id="submenu-active"{% endif %}><a href="{{ item.route }}">{{ item.name }}</a>
     <ul>
+    {% if item.items is defined %}
     {% for subitem in item.items %}
       <li><a href="{{ subitem.route }}">{{ subitem.name }}</a></li>
     {% endfor %}
+    {% endif %}
     </ul>
   </li>
   {% endfor %}
