--- a/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/index.html.twig
@@ -33,7 +33,7 @@
         <tr>
           <th>&#160;</th>
           <td>
-            <p>Nothing. <a href="#" class="ico-list">Create</a></p>
+            <p>Nothing. <a href="{{ path('admin_event_event_new') }}" class="ico-list">Create</a></p>
           </td>
         </tr>
 
