--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -96,24 +96,17 @@
                         {% include 'ClubLayoutBundle:Default:flash.html.twig' %}
 
                         {% block body %}{% endblock %}
-
                 </div> <!-- /content -->
-
         </div> <!-- /cols -->
 
         <hr class="noscreen" />
 
         <!-- Footer -->
         <div id="footer" class="box">
-
-                <p class="f-left">&copy; 2011 <a href="#">ClubMaster</a>, All Rights Reserved &reg;</p>
-
-                <p class="f-right">{% render "ClubUserBundle:Misc:versionBar" %}</p>
-
+          <p class="f-left">&copy; 2011 <a href="{{ path('homepage') }}">ClubMaster</a>, All Rights Reserved &reg;</p>
+          <p class="f-right">{% render "ClubUserBundle:Misc:versionBar" %}</p>
         </div> <!-- /footer -->
-
-</div> <!-- /main -->
-
-        {% block javascripts %}{% endblock %}
+      </div> <!-- /main -->
+      {% block javascripts %}{% endblock %}
     </body>
 </html>
