--- a/src/Club/LayoutBundle/Resources/views/Default/attend_link.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/attend_link.html.twig
@@ -1,1 +1,1 @@
-<a onclick="return confirm('Are you sure?');" href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/user-group-icon.png') }}" class="ico" alt="Attends" /></a>
+<a href="{{ url }}"><img src="{{ asset('bundles/clublayout/images/icons/16/user-group-icon.png') }}" class="ico" alt="Attends" /></a>
