--- a/src/Club/EventBundle/Resources/views/AdminEvent/_navigation.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/_navigation.html.twig
@@ -1,4 +1,4 @@
-  <div class="col33"><a href="{{ path('club_event_adminevent_prev') }}">&laquo; {{ prev.format('F Y') }}</a></div>
-  <div class="col33 center t-center bigger"><strong>{{ current.format('F Y') }} (Week #{{ current.format('W') }})</strong></div>
-  <div class="col33 t-right"><a href="{{ path('club_event_adminevent_next') }}">{{ next.format('F Y') }} &raquo;</a></div>
+  <div class="col33"><a href="{{ path('club_event_adminevent_prev') }}">&laquo; {{ prev|date('F Y') }}</a></div>
+  <div class="col33 center t-center bigger"><strong>{{ current|date('F Y') }} (Week #{{ current|date('W') }})</strong></div>
+  <div class="col33 t-right"><a href="{{ path('club_event_adminevent_next') }}">{{ next|date('F Y') }} &raquo;</a></div>
 
