Added event icons.

--- a/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
@@ -25,7 +25,7 @@
       <td>{{ attend.id }}</td>
       <td>{{ event.eventName }}</td>
       <td>{{ attend.user.profile.name }}</td>
-      <td>{{ attend.paid }}</td>
+      <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':attend.paid} %}</td>
       <td>{{ attend.createdAt|date('Y-m-d H:i:s') }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_event_attend_delete', {'id':attend.id})} %}
