--- a/src/Club/UserBundle/Resources/views/Misc/locationBar.html.twig
+++ b/src/Club/UserBundle/Resources/views/Misc/locationBar.html.twig
@@ -1,5 +1,5 @@
 {% if locations|length > 1 %}
-  Location: <strong><a href="{{ path('club_user_location_index') }}">{{ app.user.location.locationName }}</a></strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  {% trans with {'%url%':path('club_user_location_index'),'%location%':app.user.location.locationName} %}Location: <strong><a href="%url%">%location%</a></strong>{% endtrans %} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {% else %}
-  Location: <strong>{{ app.user.location.locationName }}</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  {% trans with {'%location%':app.user.location.locationName} %}Location: <strong>%location%</strong>{% endtrans %} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 {% endif %}
