--- a/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
@@ -1,12 +1,11 @@
 {% extends "ClubShopBundle::base.html.twig" %}
 
-
 {% block body %}
 
-<p class="box"><a href="{{ path('shop_checkout') }}" class="btn-info"><span>View cart</span></a></p>
+<p class="box"><a href="{{ path('shop_checkout') }}" class="btn-info"><span>{% trans %}View cart{% endtrans %}</span></a></p>
 
 {% if categories|length > 0 %}
-<h3>Categories</h3>
+<h3>{% trans %}Categories{% endtrans %}</h3>
 
 {% for cat in categories %}
 <!-- Button -->
